fixed search form z-index

--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,7 @@ section:nth-child(even){
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 200;
 }
 
 #search-form.active {
@@ -125,6 +126,7 @@ section:nth-child(even){
     font-size: 3rem;
     border-bottom: .1rem solid #fff;
     padding: 1rem 0;
+    text-transform: none;
 }
 
 #search-form #search-box::placeholder {
